2013-01-20  Bogdan Cristea <cristeab@users.sourceforge.net>
	* gtests/integration_test.cpp, itpp/base/help_functions.h,
	itpp/base/math/integration.cpp, itpp/base/math/integration.h: add numerical
	integration with function objects as integrands. Thanks to Andy Panov for
	providing the patch.

2013-01-19  Bogdan Cristea <cristeab@users.sourceforge.net>
	* CMakeLists.txt, doc/local/installation.doc,
	doc/tutorial/src/CMakeLists.txt, extras/setenv.bat, gtests/CMakeLists.txt,
	gtests/bch_test.cpp, gtests/bessel_test.cpp, gtests/blas_test.cpp,
	gtests/channel_test.cpp, gtests/cholesky_test.cpp,
	gtests/circular_buffer_test.cpp, gtests/commfunc_test.cpp,
	gtests/convcode_test.cpp, gtests/converters_test.cpp,
	gtests/demapper_test.cpp, gtests/det_test.cpp, gtests/eigen_test.cpp,
	gtests/error_count_test.cpp, gtests/exit_test.cpp, gtests/fastica_test.cpp,
	gtests/fastica_test_data.txt, gtests/itfile_test_data.it,
	gtests/parser_test_data.txt, gtests/rand_test.cpp, itpp/CMakeLists.txt: add
	more unit tests using Google framework. Add options for compiling unit
	tests, for building shared or static library and for generating the HTML
	help.

2013-01-12  Bogdan Cristea <cristeab@users.sourceforge.net>
	* doc/doxygen_html.cfg.cmake.in, itpp/CMakeLists.txt, itpp/base/parser.cpp,
	tests/modulator_nd_test.cpp: corrected compilation errors with MS Visual
	Studio 2010

2013-01-12  Bogdan Cristea <cristeab@users.sourceforge.net>
	* gtests/transforms_test.cpp, itpp/signal/transforms.cpp,
	itpp/signal/transforms.h: add thread-safe Fourier and cosine transforms.
	Thanks to Andy Panov for providing the patch (feature request #92).

2012-12-23  Bogdan Cristea <cristeab@users.sourceforge.net>
  * doc/local/index.doc.in: updated links to IT++ site

2012-12-11  Stephan Ludwig <donludovico@users.sourceforge.net>
	* itpp/comm/reedsolomon.cpp, itpp/comm/reedsolomon.h, tests/reedsolomon_test.cpp,
	tests/reedsolomon_test.ref: added feature #91: erasure decoding with Reed-Solomon